// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InnerBoxView multiple comments 1`] = `
<div
  className="harvesting-box"
>
  <div
    className="harvesting-box-header"
  >
    <div
      className="profile"
    >
      <img
        alt="John Doe User"
        className="avatar-logo"
        height="30"
        onError={[Function]}
        src="/user/id/1/avatar/30"
        width="30"
      />
      <div
        className="harvesting-infos"
      >
        <div
          className="username"
        >
          John Doe User
        </div>
        <div
          className="harvesting-date"
          title="2018-01-26T09:19:01.492406+00:00"
        >
          8 months ago
        </div>
      </div>
    </div>
    <div
      className="button-bar"
    >
      <button
        className="action-menu-btn btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="assembl-icon-ellipsis-vert grey"
        />
      </button>
    </div>
  </div>
  <div
    className="harvesting-box-body"
  >
    <div
      className="body-container"
    >
      <div
        className="previous-extract"
        onClick={[Function]}
      >
        <span
          className="assembl-icon-angle-left grey"
        />
      </div>
      <div
        className="extract-body"
      >
        This is the body
      </div>
      <div
        className="next-extract"
        onClick={[Function]}
      >
        <span
          className="assembl-icon-angle-right grey"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots InnerBoxView single comment 1`] = `
<div
  className="harvesting-box"
>
  <div
    className="harvesting-box-header"
  >
    <div
      className="profile"
    >
      <img
        alt="Odile Commenter"
        className="avatar-logo"
        height="30"
        onError={[Function]}
        src="/user/id/2/avatar/30"
        width="30"
      />
      <div
        className="harvesting-infos"
      >
        <div
          className="username"
        >
          Odile Commenter
        </div>
        <div
          className="harvesting-date"
          title="2018-01-26T09:19:01.492406+00:00"
        >
          8 months ago
        </div>
      </div>
    </div>
    <div
      className="button-bar"
    >
      <button
        className="action-menu-btn btn btn-default"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="assembl-icon-ellipsis-vert grey"
        />
      </button>
    </div>
  </div>
  <div
    className="harvesting-box-body"
  >
    <div
      className="body-container"
    >
      <div
        className="previous-extract empty"
      />
      <div
        className="extract-body"
      >
        This is the body
      </div>
      <div
        className="next-extract empty"
      />
    </div>
  </div>
</div>
`;
